tests/parser/parse-do.1.bad.error
error: Malformed bind form
  --> test:6:13
   |
 6 |      (x <- mx y)
   |               ^ unexpected trailing form
