tests/parser/parse-do.1.bad.coalton
;; BAD: Parse Do
(package test-package)

(define x 
  (do 
    (x <- mx y)
    5))
